--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/">I</a></li>
+		        	<li><a href="/Eat">About</a></li>
+	        		<li><a href="/Ass">CV</a></li>
+	        		<li><a href="/#daily">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="17mbsanderlin@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				</ul>
 			</footer>
